[features]
fail-on-warnings = []
#cargo-features = ["edition2021"]

[package]
name = "redirect-admin"
version = "0.1.0"
edition = "2021"
#rust-version = "1.56"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl", "open-ssl"] }
actix-web-httpauth = "*"
actix-cors = "*"
openssl-sys = "0.9"
openssl = { version = "0.10", features = ["v110"] }
lazy_static = "*"

# json (required)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

bson = "2.0.1"

# Date time (required)
chrono = { version = "0.4", features = ["serde"] }

# logging lib(required)
log = "0.4"
fast_log="1.3"

# BigDecimal lib(optional)
bigdecimal = "0.2"

# rbatis lib(required)
rbatis =  { version = "3.0", default-features = false, features = ["postgres","runtime-async-std-rustls"]}